--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ packages = [{include = "wfc_python"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+numpy = "^1.26.2"
+pillow = "^10.1.0"
+pygame = "^2.5.2"
 
 
 [build-system]
